Resource loading now works when compiled in jar